# LS-Prior

./: .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  factorization.ipynb  heat.ipynb  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: index.md
docs/api/: builder.md  components.md  fem.md  prior.md
docs/usage/: builder.md  components.md
examples/: builder.ipynb  components.ipynb  left_atrium_surface.msh  sphere_surface.msh
snippets/: elasticity.ipynb  factorization.ipynb  heat.ipynb  membrane.ipynb  poisson.ipynb
src/ls_prior/: builder.py  components.py  fem.py  operator.py  prior.py  weakforms.py
test/: conftest.py
test/data/: fem_converter_vectors.npz  fem_matrices.npz
test/integration/: conftest.py  test_builder.py  test_components.py  test_prior.py
test/unit/: conftest.py  test_components.py  test_fem.py
