# ==================================================================================================
# Project Metadata
# ==================================================================================================
[project]
authors = [{ name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" }]
maintainers = [
  { name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" },
]
description = "Large-Scale Gaussian Prior Fields via SPDEs"
name = "ls-prior"
requires-python = ">= 3.13"
version = "0.4.14"
readme = "README.md"
license = { text = "MIT" }
keywords = ["prior-fields", "bayesian inference", "spde", "fenicsx", "petsc", "FEM"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
]
urls = { repository = "https://github.com/UQatKIT/LS-Prior", documentation = "https://uqatkit.github.io/LS-Prior/" }


# ==================================================================================================
# Dependencies
# ==================================================================================================
[tool.pixi.dependencies]
numpy = ">=2.2"
fenics-dolfinx = ">=0.9.0, <0.10"
mpich = ">=4.3.1"
beartype = ">=0.21.0"
scifem = ">=0.7.0"


# ==================================================================================================
# Pixi Tasks
# ==================================================================================================
[tool.pixi.tasks]
test = "pytest test"
format = "ruff format"
serve-docs = "mkdocs serve"
build-docs = "mkdocs build"
changelog = "git-cliff"
pre-commit = "pre-commit install"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.4.1"
pytest-cov = ">=6.2.1"
pytest-xdist = ">=3.8.0"
pytest-mock = ">=3.14.0"

[tool.pixi.feature.docs.dependencies]
mkdocs-material = ">=9.6.18"
mkdocs-autorefs = ">=1.4.3"
mkdocstrings-python = ">=1.18.0"
git-cliff = ">=2.10.0"

[tool.pixi.feature.examples.dependencies]
jupyter = ">=1.1.1"
pandas = ">=2.3.2"
matplotlib = ">=3.10.5"
seaborn = ">=0.13.2"
pyvista = ">=0.46.3"
trame = ">=3.12.0"
trame-vtk = ">=2.9.1"
trame-vuetify = ">=3.0.2"

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.12.10"
pre-commit = ">=4.3.0"
gmsh = ">=4.13.1"
pygmsh = ">=7.1.17"


[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
examples = { features = ["examples"], solve-group = "default" }
test = { features = ["dev", "test"], solve-group = "default" }
docs = { features = ["dev", "docs"], solve-group = "default" }
all = { features = ["dev", "docs", "examples", "test"], solve-group = "default" }


# --------------------------------------------------------------------------------------------------
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"


# --------------------------------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PD011",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
per-file-ignores = { "test/*" = [
  "D100",
  "D101",
  "D103",
  "D104",
  "INP001",
  "SLF001",
] }
pydocstyle.convention = "google"


# ==================================================================================================
# Pytest
# ==================================================================================================
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=ls_prior",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "slow: tests with long runtime",
]
